2011-02-22	Chris Johns <chrisj@rtems.org>

	* specbuilder/sb-versions, specbuilder/specbuilder/version.py:
	New. Print a suitable version message for automatic documentation
	updating from the spec files in CVS.

	* specbuilder/specbuilder/build.py: Add xz support. Add a function
	to return the name of a package.
	
	* specbuilder/specbuilder/crossgcc.py: Use the build name in the
	tmp path.
	
	* specbuilder/specbuilder/darwin.py: Add xz support.
	
	* specbuilder/specbuilder/defaults.py: Add xz support. Add Windows
	and Linux support.
	
	* specbuilder/specbuilder/setup.py: Reference the correct shell
	opts. Use the shell setup in the version probe command. Fix the
	version check. Add autotools to the list of spec files to
	install.
	
	* specbuilder/specbuilder/spec.py: Add changelog and configure
	tests. Manage sub-packages better.
	
	* specbuilder/specbuilder/version.py,
	specbuilder/specbuilder/windows.py: New.

2010-08-31	Chris Johns <chrisj@rtems.org>

	* specbuilder/specbuilder/linux.py: Add Linux support. Can be
	useful on those distributions that do not support RPM
	packages. Users should always be encouraged to use the RPM
	packages provided by the project.

	* specbuilder/specbuilder/default.py: Add Linux.

2010-08-29	Chris Johns <chrisj@rtems.org>

	* specbuilder/specbuilder/defaults.py: Add default configure
	macro. Add --dry-run to the parsed arguments. Fix the case when
	run on a new host that does not have default support.
	
2010-08-13	Chris Johns <chrisj@rtems.org>

	* specbuilder/specbuilder/defaults.py: Provide a default shell.

	* specbuilder/specbuilder/rtems.py: Provide a default autoconf
	version.

	* specbuilder/specbuilder/setup.py: Use the default setup shell
	and check the version of autoconf needed.

2010-08-13	Chris Johns <chrisj@rtems.org>

	* specbuilder/specbuilder/setup.py: Add import for execute.

2010-08-13	Chris Johns <chrisj@rtems.org>

	* specbuilder/specbuilder/rtems.py: New. Move RTEMS specific