@@ -1,3 +1,12 @@
+2011-06-09	Chris Johns <chrisj@rtems.org>
+
+	* specbuilder/specbuilder/build.py,
+	specbuilder/specbuilder/crossgcc.py,
+	specbuilder/specbuilder/defaults.py,
+	specbuilder/specbuilder/linux.py,
+	specbuilder/specbuilder/spec.py: Add CentOS support for older
+	Pythons. Add options to build the tools with specific flags.
+
 2011-02-22	Chris Johns <chrisj@rtems.org>
 
 	* specbuilder/sb-versions, specbuilder/specbuilder/version.py:
